# walrus

./: .dockerignore  .drone.jsonnet  .drone.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  backend-local.yml  backend-staging.yml  docker-compose.local.yml  docker-compose.yml  entrypoint-celery.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  test.txt
.github/workflows/: trigger-pr-reviewing.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
account/: admin.py  caches.py  jwt.py  models.py  permissions.py  serializers.py  urls.py  views.py
account/fixtures/: experiment_group.json
account/migrations/: 0001_initial.py  0002_member_spotify_provider_member_spotify_proxy_account.py  (+2 more)
ci/: cleanup-dockerhub.sh  wait-for-db.py  wait-for-redis.py
entrypoints/: celery.sh  server.sh
env/: walrus-local.env.example  walrus-local.env.secret  walrus-staging.env.secret
listening_profile/: admin.py  apps.py  managers.py  models.py  schemas.py  services.py
playlist/: admin.py  caches.py  constants.py  filters.py  managers.py  models.py  schemas.py  serializers.py  services.py  urls.py  views.py
provider/: admin.py  apps.py  caches.py  decorators.py  exceptions.py  models.py  schedules.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
track/: admin.py  managers.py  models.py  schemas.py  serializers.py
utils/: constants.py  mixins.py  redirect_service.py  renderers.py  response.py  views.py
walrus/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+36 files in other folders)
